--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-expo-viewport-units": "0.0.8",
     "react-native-paper": "^3.6.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-viewport-units": "0.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
